--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
  	<link rel="stylesheet" href="1.css">
 </head>
 <body >
-    <div class="menu navbar">
+    <div class="index">
+    	<div class="menu navbar">
     	<div class="container">
     		<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -41,14 +42,12 @@
     	</div>
     </div>
     <!-- end menu -->
-
-    <div class="index">
-    	<div class="container">
-    		<div class="row">
-    			<div class="col-md-4">
-    				<h1>Flosat</h1>
-    				<p>Easy connect, easy to use!</p>
-    				<div class="btn btn-info">Get started</div>
+    <div class="container">
+   		<div class="row">
+   			<div class="col-md-4">
+   				<h1>Flosat</h1>
+   				<p>Easy connect, easy to use!</p>    
+   				<div class="btn btn-info getStarted">Get started</div>
     			</div>
     		</div>
     	</div>
@@ -62,14 +61,14 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-5 video">
+				<div class="col-md-6 video">
 					<div class="embed-responsive embed-responsive-16by9">
 					  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/v64KOxKVLVg"></iframe>
 					</div>
 				</div>
 				<!-- end video -->
 
-				<div class="col-md-5 info">
+				<div class="col-md-6 info">
 					<h1 class="titleFeature">We are leading software provider of solutions</h1>
 					<p class="descriptionFeature">Bacon ipsum dolor amet rump pastrami leberkas shankle cow, drumstick picanha pancetta shoulder bacon kielbasa ground round sirloin strip steak. Short ribs alcatra turkey buffalo pig ribeye spare ribs rump drumstick meatloaf leberkas shoulder brisket frankfurter.</p>
 					<div class="btn btn-info readMore">Read more <i class="fas fa-chevron-right"></i></div>
@@ -145,13 +144,13 @@
 	<div class="digits">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-md-12 titleDigits">
 					<h1>We uphold high Ethical Standards</h1>
 				</div>
 			</div>
 			<!-- end title -->
 
-			<div class="row">
+			<div class="row infoDigits">
 				<div class="col-md-4">
 					<h1>537+</h1>
 					<p>Pioneer Breakthroughs</p>
@@ -169,21 +168,31 @@
 	</div>
 	<!-- end Digits -->
 
-	<footer>
+	<div class="footer">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-4">
 					<h1>Flosat</h1>
-					<p>Easy connect, easy to use!</p>
-					<p>Contact us</p>
-					<span class="facebook"><i class="fab fa-facebook-f"></i></span>
-					<span class="twitter"><i class="fab fa-twitter"></i></span>
-					<span class="gmail"><i class="fas fa-envelope"></i></span>
-					<p>Copyright <i class="far fa-copyright"></i> by Flosat 2019</p>
+					<p class="slogan"> Easy connect, easy to use!</p>
+					<p class="contact">Contact us</p>
+					<div class="col-md-12 iconbox">
+			            <div class="iconbox">
+			            <div class="icon1">
+			              <b class="fab fa-facebook-f"></b>
+			            </div>
+			            <div class="icon2">
+			              <b class="fab fa-twitter"></b>
+			            </div>
+			            <div class="icon3">
+			              <b class="fas fa-envelope"></b>
+			            </div>
+			            </div>
+			         </div>
+					<p class="copyright">Copyright <i class="far fa-copyright"></i> by Flosat 2019</p>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-8 infoFooter">
 					<div class="col-md-3">
-					<p>Product</p>
+					<p class="title">Product</p>
 					<ul>
 						<li>Why Flosat?</li>
 						<li>Flowchart</li>
@@ -195,7 +204,7 @@
 					<!-- end Product -->
 
 					<div class="col-md-3">
-						<p>Flosat for team</p>
+						<p class="title">Flosat for team</p>
 						<ul>
 							<li>Why Flosat?</li>
 							<li>Flowchart</li>
@@ -209,7 +218,7 @@
 					<!-- end Flosat for team -->
 
 					<div class="col-md-3">
-						<p>Resources</p>
+						<p class="title">Resources</p>
 						<ul>
 							<li>Why Flosat?</li>
 							<li>Flowchart</li>
@@ -219,7 +228,7 @@
 					<!-- end Resource -->
 
 					<div class="col-md-3">
-						<p>Company</p>
+						<p class="title">Company</p>
 						<ul>
 							<li>Why Flosat?</li>
 							<li>Flowchart</li>
@@ -235,7 +244,7 @@
 			<!-- end Infomation -->
 			</div>
 		</div>
-	</footer>
+	</div>
 
 	<!-- Script -->
 	<script src="https://kit.fontawesome.com/77d5e8e104.js"></script>
