--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 					 <span class="icon-bar"></span>
 					 <span class="icon-bar"></span>
 				</button>
-			<a href="" class="navbar-brand">Flosat</a>
+			<a href="" class="navbar-brand logo">Flosat</a>
 			</div>
 			
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     			<ul class="nav navbar-nav navbar-right">
-    				<li><a href="#home">Why Flosat?</a></li>
-    				<li><a href="#portfolio">Feature</a></li>
-    				<li><a href="#about">Resource</a></li>
+    				<li><a href="#whatIsFlosat">Why Flosat?</a></li>
+    				<li><a href="#feature">Feature</a></li>
+    				<li><a href="#digits">Resource</a></li>
     				<li><a href="#contact">Pricing</a></li>
 					<li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user"></i></a>
@@ -52,7 +52,7 @@
     		</div>
     	</div>
     </div>
-	<div class="whatIsFlosat">
+	<div class="whatIsFlosat" id="whatIsFlosat">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center">
@@ -78,7 +78,7 @@
 	</div>
 	<!-- end What is Flosat? -->
 
-	<div class="feature">
+	<div class="feature" id="feature">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -141,7 +141,7 @@
 	</div>
 	<!-- end Feature -->
 
-	<div class="digits">
+	<div class="digits" id="digits">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 titleDigits">
