--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="vendor/bootstrap.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="vendor/bootstrap.css">
- 	<link rel="stylesheet" href="1.css">
+ 	<link rel="stylesheet" href="public/css/1.css">
 </head>
 <body >
     <div class="index">
@@ -248,6 +248,6 @@
 
 	<!-- Script -->
 	<script src="https://kit.fontawesome.com/77d5e8e104.js"></script>
-	<script type="text/javascript" src="1.js"></script>
+	<script type="text/javascript" src="public/js/1.js"></script>
 </body>
 </html>
