Complete signup.html page

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="col-md-4">
 					<h1>Flosat</h1>
 					<p>Easy connect, easy to use!</p>    
-					<a type="button" data-toggle="modal"  data-target="#modalSignup" class="btn btn-info getStarted">Get started</a>
+					<a href="signup.html" class="btn btn-info getStarted">Get started</a>
 				</div>
 			</div>
 		</div>
@@ -78,210 +78,176 @@
 	</div>
 	<!-- end What is Flosat? -->
 	
-	<div class="modal fade modalLogin" id="modalSignup" tabindex="-1" role="dialog" aria-labelledby="gridSystemModalLabel">
-		<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-			<div class="modal-content">
-				<div class="modal-body signup">
-					<div class="row">
-						<div class="col-md-5 picture">
-
-						</div>
-						<div class="col-md-7 signupForm">
-							<p class="text-right step">Step 1 of 4</p>
-							<h1 class="text-center">SIGN UP</h1>
-							<p class="text-center">Create your account</p>
-							<form class="signupForm1">
-						          <div class="form-group">
-						          	<div class="input-group input-group-lg">
-							          	<span class="input-group-addon"><i class="fas fa-envelope"></i></span>
-							            <input type="text" class="form-control" id="recipient-name" placeholder="Email">
-						          	</div>
-						          </div>
-						          <div class="form-group">
-							          <div class="input-group input-group-lg">
-							          	<span class="input-group-addon"><i class="fas fa-unlock-alt"></i></span>
-							            <input type="Password" class="form-control" id="message-text" placeholder="Password"></input>
-						        	  </div>
-						          </div>
-						          <div class="btn btn-primary btn-block text-center">Next</div>
-						        </form>
-							</div>
-						</div>
-					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal-dialog -->
-		</div><!-- /.modal -->
-		<!-- end modal -->
-		<div class="feature" id="feature">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<h1>FEATURE</h1>
-						<p class="description">Bacon ipsum dolor amet rump pastrami</p>
-					</div>
-				</div>
-				<!-- end title -->
-
-				<div class="row">
-					<div class="col-md-4 flowchart">
-						<div class="border">
-							<div class="icon">
-								<i class="fas fa-project-diagram"></i>
-							</div>
-							<h2>Flowchart</h2>
-							<ul>
-								<li>Bacon ipsum dolor amet </li>
-								<li>Short ribs alcatra turkey</li>
-								<li>Short loin drumstick jerky</li>
-								<li>Frankfurter sirloin ham</li>
-							</ul>
-						</div>
-					</div>
-					<!-- end Flowchart -->
-
-					<div class="col-md-4 chat">
-						<div class="border">
-							<div class="icon">
-								<i class="fas fa-comments"></i>
-							</div>
-							<h2>Chat</h2>
-							<ul>
-								<li>Bacon ipsum dolor amet </li>
-								<li>Short ribs alcatra turkey</li>
-								<li>Short loin drumstick jerky</li>
-								<li>Frankfurter sirloin ham</li>
-							</ul>
-						</div>
-					</div>
-					<!-- end Chat -->
-
-					<div class="col-md-4 agile">
-						<div class="border">
-							<div class="icon">
-								<i class="fas fa-project-diagram"></i>
-							</div>
-							<h2>Agile</h2>
-							<ul>
-								<li>Bacon ipsum dolor amet </li>
-								<li>Short ribs alcatra turkey</li>
-								<li>Short loin drumstick jerky</li>
-								<li>Frankfurter sirloin ham</li>
-							</ul>
-						</div>
-					</div>
-					<!-- end Agile -->
+	<div class="feature" id="feature">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h1>FEATURE</h1>
+					<p class="description">Bacon ipsum dolor amet rump pastrami</p>
 				</div>
 			</div>
-		</div>
-		<!-- end Feature -->
+			<!-- end title -->
 
-		<div class="digits" id="digits">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-12 titleDigits">
-						<h1>We uphold high Ethical Standards</h1>
+			<div class="row">
+				<div class="col-md-4 flowchart">
+					<div class="border">
+						<div class="icon">
+							<i class="fas fa-project-diagram"></i>
+						</div>
+						<h2>Flowchart</h2>
+						<ul>
+							<li>Bacon ipsum dolor amet </li>
+							<li>Short ribs alcatra turkey</li>
+							<li>Short loin drumstick jerky</li>
+							<li>Frankfurter sirloin ham</li>
+						</ul>
 					</div>
 				</div>
-				<!-- end title -->
+				<!-- end Flowchart -->
 
-				<div class="row infoDigits">
-					<div class="col-md-4">
-						<h1>537+</h1>
-						<p>Pioneer Breakthroughs</p>
-					</div>
-					<div class="col-md-4">
-						<h1>1082+</h1>
-						<p>Client Expectations</p>
-					</div>
-					<div class="col-md-4">
-						<h1>981+</h1>
-						<p>Delivered Promises</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- end Digits -->
-
-		<div class="footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4">
-						<h1>Flosat</h1>
-						<p class="slogan"> Easy connect, easy to use!</p>
-						<p class="contact">Contact us</p>
-						<div class="col-md-12 iconbox">
-							<div class="iconbox">
-								<div class="icon1">
-									<b class="fab fa-facebook-f"></b>
-								</div>
-								<div class="icon2">
-									<b class="fab fa-twitter"></b>
-								</div>
-								<div class="icon3">
-									<b class="fas fa-envelope"></b>
-								</div>
-							</div>
+				<div class="col-md-4 chat">
+					<div class="border">
+						<div class="icon">
+							<i class="fas fa-comments"></i>
 						</div>
-						<p class="copyright">Copyright <i class="far fa-copyright"></i> by Flosat 2019</p>
-					</div>
-					<div class="col-md-8 infoFooter">
-						<div class="col-md-3">
-							<p class="title">Product</p>
-							<ul>
-								<li>Why Flosat?</li>
-								<li>Flowchart</li>
-								<li>Scrum</li>
-								<li>Security</li>
-								<li>Pricing</li>
-							</ul>
-						</div>
-						<!-- end Product -->
-
-						<div class="col-md-3">
-							<p class="title">Flosat for team</p>
-							<ul>
-								<li>Why Flosat?</li>
-								<li>Flowchart</li>
-								<li>Scrum</li>
-								<li>Security</li>
-								<li>Pricing</li>
-								<li>Security</li>
-								<li>Pricing</li>
-							</ul>
-						</div>
-						<!-- end Flosat for team -->
-
-						<div class="col-md-3">
-							<p class="title">Resources</p>
-							<ul>
-								<li>Why Flosat?</li>
-								<li>Flowchart</li>
-								<li>Scrum</li>
-							</ul>
-						</div>
-						<!-- end Resource -->
-
-						<div class="col-md-3">
-							<p class="title">Company</p>
-							<ul>
-								<li>Why Flosat?</li>
-								<li>Flowchart</li>
-								<li>Scrum</li>
-								<li>Security</li>
-								<li>Pricing</li>
-								<li>Pricing</li>
-							</ul>
-						</div>
-						<!-- end Company -->
+						<h2>Chat</h2>
+						<ul>
+							<li>Bacon ipsum dolor amet </li>
+							<li>Short ribs alcatra turkey</li>
+							<li>Short loin drumstick jerky</li>
+							<li>Frankfurter sirloin ham</li>
+						</ul>
 					</div>
 				</div>
-				<!-- end Infomation -->
+				<!-- end Chat -->
+
+				<div class="col-md-4 agile">
+					<div class="border">
+						<div class="icon">
+							<i class="fas fa-project-diagram"></i>
+						</div>
+						<h2>Agile</h2>
+						<ul>
+							<li>Bacon ipsum dolor amet </li>
+							<li>Short ribs alcatra turkey</li>
+							<li>Short loin drumstick jerky</li>
+							<li>Frankfurter sirloin ham</li>
+						</ul>
+					</div>
+				</div>
+				<!-- end Agile -->
 			</div>
 		</div>
 	</div>
+	<!-- end Feature -->
 
-	<!-- Script -->
-	<script src="https://kit.fontawesome.com/77d5e8e104.js"></script>
-	<script type="text/javascript" src="public/js/1.js"></script>
+	<div class="digits" id="digits">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 titleDigits">
+					<h1>We uphold high Ethical Standards</h1>
+				</div>
+			</div>
+			<!-- end title -->
+
+			<div class="row infoDigits">
+				<div class="col-md-4">
+					<h1>537+</h1>
+					<p>Pioneer Breakthroughs</p>
+				</div>
+				<div class="col-md-4">
+					<h1>1082+</h1>
+					<p>Client Expectations</p>
+				</div>
+				<div class="col-md-4">
+					<h1>981+</h1>
+					<p>Delivered Promises</p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end Digits -->
+
+	<div class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+					<h1>Flosat</h1>
+					<p class="slogan"> Easy connect, easy to use!</p>
+					<p class="contact">Contact us</p>
+					<div class="col-md-12 iconbox">
+						<div class="iconbox">
+							<div class="icon1">
+								<b class="fab fa-facebook-f"></b>
+							</div>
+							<div class="icon2">
+								<b class="fab fa-twitter"></b>
+							</div>
+							<div class="icon3">
+								<b class="fas fa-envelope"></b>
+							</div>
+						</div>
+					</div>
+					<p class="copyright">Copyright <i class="far fa-copyright"></i> by Flosat 2019</p>
+				</div>
+				<div class="col-md-8 infoFooter">
+					<div class="col-md-3">
+						<p class="title">Product</p>
+						<ul>
+							<li>Why Flosat?</li>
+							<li>Flowchart</li>
+							<li>Scrum</li>
+							<li>Security</li>
+							<li>Pricing</li>
+						</ul>
+					</div>
+					<!-- end Product -->
+
+					<div class="col-md-3">
+						<p class="title">Flosat for team</p>
+						<ul>
+							<li>Why Flosat?</li>
+							<li>Flowchart</li>
+							<li>Scrum</li>
+							<li>Security</li>
+							<li>Pricing</li>
+							<li>Security</li>
+							<li>Pricing</li>
+						</ul>
+					</div>
+					<!-- end Flosat for team -->
+
+					<div class="col-md-3">
+						<p class="title">Resources</p>
+						<ul>
+							<li>Why Flosat?</li>
+							<li>Flowchart</li>
+							<li>Scrum</li>
+						</ul>
+					</div>
+					<!-- end Resource -->
+
+					<div class="col-md-3">
+						<p class="title">Company</p>
+						<ul>
+							<li>Why Flosat?</li>
+							<li>Flowchart</li>
+							<li>Scrum</li>
+							<li>Security</li>
+							<li>Pricing</li>
+							<li>Pricing</li>
+						</ul>
+					</div>
+					<!-- end Company -->
+				</div>
+			</div>
+			<!-- end Infomation -->
+		</div>
+	</div>
+</div>
+
+<!-- Script -->
+<script src="https://kit.fontawesome.com/77d5e8e104.js"></script>
+<script type="text/javascript" src="public/js/1.js"></script>
 </body>
 </html>
