--- a/signup2.html
+++ b/signup2.html
@@ -32,12 +32,12 @@
 						</div>
 						<div class="form-group">
 							<div class="input-group input-group-lg">
-								<span class="input-group-addon"><i class="fas fa-unlock-alt"></i></span>
+								<span class="input-group-addon"><i class="fas fa-phone-square-alt"></i></span>
 								<input type="text" class="form-control" id="message-text" placeholder="Number Phone"></input>
 							</div>
 						</div>
 						<p>By signing up, you agree to the Terms of Service and Privacy Policy, including Cookie Use. Others will be able to find you by email or phone number when provided · Privacy Options</p>
-						<div class="btn btn-primary btn-block text-center">Next</div>
+						<a href="signup3.html" class="btn btn-primary btn-block text-center">Next</a>
 					</form>
 				</div>
 			</div>
