Complete Room chat, complete 90% My Account

--- a/chatroom.html
+++ b/chatroom.html
@@ -67,7 +67,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav ml-auto mt-2 mt-lg-0">
 							<li class="nav-item active">
-								<div class="input-group mb-3">
+								<div class="input-group input-search mb-3">
 									<input type="text" class="form-control" placeholder="Search..." aria-label="Recipient's username" aria-describedby="basic-addon2">
 									<div class="input-group-append">
 										<span class="input-group-text" ><i class="fas fa-search"></i></span>
@@ -78,57 +78,74 @@
 								<a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 									<i class="fas fa-comment"></i>
 								</a>
-								<div class="dropdown-menu messenger-alert dropdown-menu-right" aria-labelledby="navbarDropdown">
+								<div class="dropdown-menu messenger-alert  dropdown-menu-right container-alert" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" href="#">
 										<div class="container-content">
-							<div class="row">
-								<div class="col-md-4">
-									<div class="avatar-alert" style="float: left;"></div>
-									<div class="name-content" style="float: left;">
-										<p class="name-alert1">David</p>
-										<p class="name-alert2">Developer</p>
-									</div>
-								</div>
-								<div class="col-md-6 messenge-alert">
-									Hey! Are you busy?
-								</div>
-								<div class="col-md-2 time-alert">4 seconds ago</div>
-							</div>
-							</div>
+											<div class="row">
+												<div class="col-md-4">
+													<div class="avatar-alert" style="float: left;"></div>
+													<div class="name-content" style="float: left;">
+														<p class="name-alert1">Kate</p>
+														<p class="name-alert2">Manager</p>
+													</div>
+												</div>
+												<div class="col-md-6 messenge-alert">
+													Hi! I love you so much
+												</div>
+												<div class="col-md-2 time-alert">10 seconds ago</div>
+											</div>
+										</div>
 									</a>
 									<a class="dropdown-item" href="#">
 										<div class="container-content">
-							<div class="row">
-								<div class="col-md-4">
-									<div class="avatar-alert" style="float: left;"></div>
-									<div class="name-content" style="float: left;">
-										<p class="name-alert1">Kate</p>
-										<p class="name-alert2">Manager</p>
-									</div>
-								</div>
-								<div class="col-md-6 messenge-alert">
-									Hi! I love you so much
-								</div>
-								<div class="col-md-2 time-alert">10 seconds ago</div>
-							</div>
-							</div>
+											<div class="row">
+												<div class="col-md-4">
+													<div class="avatar-alert" style="float: left;"></div>
+													<div class="name-content" style="float: left;">
+														<p class="name-alert1">Kane</p>
+														<p class="name-alert2">Member</p>
+													</div>
+												</div>
+												<div class="col-md-6 messenge-alert">
+													Hi! I love you so much
+												</div>
+												<div class="col-md-2 time-alert">10 seconds ago</div>
+											</div>
+										</div>
 									</a>
 									<a class="dropdown-item" href="#">
 										<div class="container-content">
-							<div class="row">
-								<div class="col-md-4">
-									<div class="avatar-alert" style="float: left;"></div>
-									<div class="name-content" style="float: left;">
-										<p class="name-alert1">Jonson</p>
-										<p class="name-alert2">Designer</p>
-									</div>
-								</div>
-								<div class="col-md-6 messenge-alert">
-									Portfolio Ready!
-								</div>
-								<div class="col-md-2 time-alert">4 seconds ago</div>
-							</div>
-							</div>
+											<div class="row">
+												<div class="col-md-4">
+													<div class="avatar-alert" style="float: left;"></div>
+													<div class="name-content" style="float: left;">
+														<p class="name-alert1">David</p>
+														<p class="name-alert2">PM</p>
+													</div>
+												</div>
+												<div class="col-md-6 messenge-alert">
+													Hi! You are busy?
+												</div>
+												<div class="col-md-2 time-alert">16 seconds ago</div>
+											</div>
+										</div>
+									</a>
+									<a class="dropdown-item" href="#">
+										<div class="container-content">
+											<div class="row">
+												<div class="col-md-4">
+													<div class="avatar-alert" style="float: left;"></div>
+													<div class="name-content" style="float: left;">
+														<p class="name-alert1">Jonson</p>
+														<p class="name-alert2">Designer</p>
+													</div>
+												</div>
+												<div class="col-md-6 messenge-alert">
+													Portfolio Ready!
+												</div>
+												<div class="col-md-2 time-alert">4 seconds ago</div>
+											</div>
+										</div>
 									</a>
 								</div>
 							</li>
