Complete account and account-edit page

--- a/account.html
+++ b/account.html
@@ -71,15 +71,15 @@
 								<!-- end password -->
 								<div class="row">
 									<div class="col-md-4"></div>
-									<div class="col-md-8">
-										<a href="">Change password</a>
+									<div class="col-md-8 change-password-box">
+										<a href="" class="change-password">Change password</a>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-8"></div>
 									<div class="col-md-4">
-										<a href="signup.html" class="btn btn-info getStarted">Cancel</a>
-										<a href="signup.html" class="btn btn-info getStarted">Ok</a>
+										<a href="chatroom.html" class="btn btn-info cancel">Cancel</a>
+										<a href="account-edit.html" class="btn btn-info ok">Ok</a>
 									</div>
 								</div>
 							</div>
