--- a/chatroom.html
+++ b/chatroom.html
@@ -12,8 +12,10 @@
 <body >
 	<div class="d-flex" id="wrapper">
 		<!-- Sidebar -->
-		<div class="bg-light border-right" id="sidebar-wrapper">
-			<div class="sidebar-heading account"></div>
+		<div class="bg-light border-right" id="sidebar-wrapper">	
+			<a href="account.html">
+				<div class="sidebar-heading account"></div>
+			</a>
 			<div class="flowchart"></div>
 			<div class="chat"></div>
 			<div class="agile"></div>
