--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
 							<input type="checkbox" checked="checked">
 							<span class="checkmark"></span>
 						</label>
-						<a href="signup2.html" class="btn btn-primary btn-block text-center">Login</a>
+						<a href="chatroom.html" class="btn btn-primary btn-block text-center">Login</a>
 						<p class="text-center signupAccount"><a>Already have an account?</a></p>
 						<p class="text-center copyright">Copyright <i class="far fa-copyright"></i> by Flosat 2019</p>
 					</form>
